diff --git a/root/ports-www-chromium-67-orig/files/patch-build_config_BUILD.gn b/root/ports-www-chromium-67/files/patch-build_config_BUILD.gn
index 5cc8f2b..c320cab 100644
--- a/root/ports-www-chromium-67-orig/files/patch-build_config_BUILD.gn
+++ b/root/ports-www-chromium-67/files/patch-build_config_BUILD.gn
@@ -1,6 +1,17 @@
---- build/config/BUILD.gn.orig	2017-07-25 21:04:48.000000000 +0200
-+++ build/config/BUILD.gn	2017-08-02 23:31:08.597825000 +0200
-@@ -166,7 +166,7 @@
+--- build/config/BUILD.gn.orig	2018-02-24 16:25:08.000000000 +0100
++++ build/config/BUILD.gn	2018-03-03 19:33:34.562749000 +0100
+@@ -92,6 +92,10 @@ config("feature_flags") {
+       "MEMORY_TOOL_REPLACES_ALLOCATOR",
+       "MEMORY_SANITIZER_INITIAL_SIZE",
+     ]
++  } else {
++    defines += [
++      "MEMORY_TOOL_REPLACES_ALLOCATOR",
++    ]
+   }
+   if (is_asan) {
+     defines += [ "ADDRESS_SANITIZER" ]
+@@ -157,7 +161,7 @@ config("debug") {
        # builds, and we have to tell it to turn it off.
        defines += [ "_HAS_ITERATOR_DEBUGGING=0" ]
      }
@@ -9,7 +20,7 @@
      # Enable libstdc++ debugging facilities to help catch problems early, see
      # http://crbug.com/65151 .
      # TODO(phajdan.jr): Should we enable this for all of POSIX?
-@@ -255,7 +255,7 @@
+@@ -257,7 +261,7 @@ config("default_libs") {
        "CoreText.framework",
        "Foundation.framework",
      ]
@@ -17,8 +28,8 @@
 +  } else if (is_linux && !is_bsd) {
      libs = [
        "dl",
-       "rt",
-@@ -302,7 +302,7 @@
+       "pthread",
+@@ -310,7 +314,7 @@ config("executable_config") {
        "//build/config/ios:ios_dynamic_flags",
        "//build/config/ios:ios_executable_flags",
      ]
